--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,6 +11,12 @@
     tools:context="com.example.alumno_g.myapplication.LoginActivity">
 
     <!-- Login progress -->
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
+
     <ProgressBar
         android:id="@+id/login_progress"
         style="?android:attr/progressBarStyleLarge"
@@ -75,7 +81,7 @@
             <ToggleButton
                 android:id="@+id/toggleButton"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:text="ToggleButton" />
 
         </LinearLayout>
